[tool.poetry]
name = "sqlorm-py"
version = "0.2.0"
description = "A new kind or ORM that do not abstract away your database or SQL queries."
authors = ["Maxime Bouroumeau-Fuseau <maxime.bouroumeau@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hyperflask/sqlorm"
packages = [{include = "sqlorm"}]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "^1.8.2"
psycopg = { extras = ["binary"], version = "^3.1.18", optional = true }
mysql-connector-python = { version = "^8.3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.3"
mkdocs-material = "^9.5.24"
mkdocs-callouts = "^1.13.2"

[tool.poetry.plugins."opentelemetry_instrumentor"]
sqlorm = "sqlorm.opentelemetry:SQLORMInstrumentor"

[tool.ruff]
include = ["sqlorm/**/*.py"]
line-length = 100

[tool.ruff.lint]
exclude = ["sqlorm/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"